--- a/index.htm
+++ b/index.htm
@@ -40,11 +40,11 @@
                 <input id="placeForm" placeholder="Insira seu sobrenome aqui" type="text" alt="" required>
                 <h3>Área de Interesse:</h3><br>
                 <div class="checkBox">
-                    <input type="checkbox" value="front">
+                    <input type="checkbox" value="front" />
                     <label>FRONT-END</label>
-                    <input type="checkbox" value="back">
+                    <input type="checkbox" value="back" />
                     <label>BACK-END</label>
-                    <input type="checkbox" value="bd">
+                    <input type="checkbox" value="bd" />
                     <label>BANCO-DE-DADOS</label>
 
                 </div>
@@ -55,11 +55,42 @@
                 <h3>Insira uma frase criativa aqui:</h3><br>
                 <input id="placeForm" placeholder="Qual frase criativa gostaria de falar ? :) " type="text" alt=""
                     required><br>
-                <button id="logMidButton">LOGIN</button>
+                <button id="logMidButton">CADASTRAR</button>
             </from>
         </div>
     </div>
-
+    <footer>
+        <div class="leftFooter">
+            <nav>
+                <h5>Escola</h5>
+                <ul>
+                    <li><a href="">Fomação em Tecnolofia</a></li>
+                    <li><a href="">Formação em Marketing</a></li>
+                    <li><a href="">Formação em Dados</a></li>
+                    <li><a href="">Formação em Projetos</a></li>
+                    <li><a href="">Formação em Produto</a></li>
+                </ul>
+            </nav>
+            <nav>
+                <h5>Sobre a DNC</h5>
+                <ul>
+                    <li><a href="">Histtória</a></li>
+                    <li><a href="">Missão e Valores</a></li>
+                    <li><a href="">Trabalhe Conosco</a></li>
+                    <li><a href="">Conteúdo Gratuito</a></li>
+                </ul>
+            </nav>
+            <div class="rightFooter">
+                © 2022 DTC Treinamentos & Consultoria<br>
+                LTDA | CNPJ: 27.995.577/0001-37 |<br>
+                R. Justino Cobra, 61 – Vila Ema | São José dos<br>
+                Campos – SP | CEP 12243-030
+            </div>
+        </div>
+        <div class="direitos">
+            <a href="">Termos de Uso | Política de Privacidade</a>
+        </div>
+    </footer>
 </body>
 
 </html>
